Brisanje jedne slike iz posta